--- a/main.css/app.css
+++ b/main.css/app.css
@@ -122,8 +122,8 @@ nav .list li:nth-child(1) a::after {
   width: 90%;
 }
 .main .container .img {
-  max-width: 400px;
-  max-height: 400px;
+  max-width: 40px;
+  max-height: 40px;
   z-index: -2;
 }
 .main .container .img img {
@@ -392,7 +392,7 @@ form a {
   border-radius: 10px;
   cursor: pointer;
   align-self: flex-start;
-  margin-left: 120px;
+  margin-left: 150px;
 }
 form a:hover {
   transform: scale(1.1, 1.1);
@@ -404,6 +404,7 @@ textarea::placeholder {
 textarea {
   padding: 10px;
   width: 74%;
+  height: 200px;
   border-radius: 30px;
   outline: 0;
   padding-left: 30px;
@@ -411,6 +412,7 @@ textarea {
   font-size: 18px;
   border: 1px solid var(--primary-Color);
   color: var(--nav-Color);
+  resize: none;
 }
 .info {
   display: flex;
